# rust-numpy

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  aliases.js  appveyor.yml  build.rs  codecov.yml  crates.js  dark.css  generate_doc.sh  help.html  index.html  light.css  main.js  search-index.js  settings.html  source-files.js  src-files.js  wercker.yml  x.py
.github/workflows/: ci.yml  doc.yml  release.yml  test.yml
benches/: array.rs  array_like.rs  borrow.rs  iter.rs
ci/actions/: test.sh
ci/travis/: deploy.sh  setup.sh  test.sh
example/: .gitignore  README.md  example.py  requirements.txt  setup.py  test.py
example/extensions/: Cargo.toml
example/extensions/src/: lib.rs
example/rust_ext/: __init__.py
example/simple-extension/: setup.py
example/tests/: test_ext.py
examples/linalg/: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
examples/linalg/rust_linalg/: __init__.py
examples/linalg/src/: lib.rs
examples/linalg/tests/: test_linalg.py
examples/parallel/: Cargo.toml  README.md  noxfile.py  tox.ini
examples/parallel/src/: lib.rs
examples/parallel/tests/: test_parallel.py
examples/simple/: Cargo.toml  Pipfile  README.md  noxfile.py  pyproject.toml
examples/simple-extension/: Cargo.toml  README.md  pyproject.toml  setup.py  tox.ini
examples/simple-extension/rust_ext/: __init__.py
examples/simple-extension/src/: lib.rs
examples/simple-extension/tests/: test_ext.py
examples/simple/src/: lib.rs
examples/simple/tests/: test_ext.py
main/: crates.js  search-index.js  settings.html  source-files.js
main/numpy/: all.html  enum.DataType.html  fn.Ix1.html  fn.Ix2.html  fn.Ix3.html  fn.Ix4.html  fn.Ix5.html  fn.Ix6.html  fn.IxDyn.html  fn.dot.html  fn.einsum_impl.html  fn.inner.html  index.html  macro.array.html  macro.einsum.html  macro.pyarray.html  sidebar-items.js  struct.FromVecError.html  struct.NotContiguousError.html  struct.PyArrayDescr.html  struct.PyReadonlyArray.html  struct.ShapeError.html  trait.Element.html  trait.IterMode.html  type.Ix1.html  type.Ix2.html  type.Ix3.html  type.Ix4.html  type.Ix5.html  type.Ix6.html  type.PyReadonlyArray1.html  type.PyReadonlyArray3.html  type.PyReadonlyArrayDyn.html  type.c32.html  type.c64.html
master/: search-index.js  settings.html  source-files.js
master/numpy/: all.html  enum.DataType.html  fn.Ix1.html  fn.Ix2.html  fn.Ix3.html  fn.Ix4.html  fn.Ix5.html  fn.Ix6.html  fn.IxDyn.html  fn.dot.html  fn.einsum_impl.html  fn.inner.html  index.html  macro.array.html  macro.einsum!.html  macro.einsum.html  macro.pyarray!.html  macro.pyarray.html  sidebar-items.js  struct.FromVecError.html  struct.NotContiguousError.html  struct.PyArrayDescr.html  struct.PyReadonlyArray.html  struct.ShapeError.html  trait.Element.html  trait.IterMode.html  type.Ix1.html  type.Ix2.html  type.Ix3.html  type.Ix4.html  type.Ix5.html  type.Ix6.html  type.IxDyn.html  type.PyReadonlyArray1.html  type.PyReadonlyArray2.html  type.PyReadonlyArray3.html  type.PyReadonlyArray4.html  type.PyReadonlyArray5.html  type.PyReadonlyArray6.html  type.PyReadonlyArrayDyn.html  (+2 more)
numpy/: all.html  enum.BorrowError.html  enum.DataType.html  fn.Ix1.html  fn.Ix2.html  fn.Ix3.html  fn.Ix4.html  fn.Ix5.html  fn.Ix6.html  fn.IxDyn.html  fn.dot.html  fn.dot_bound.html  fn.dtype.html  fn.dtype_bound.html  fn.einsum.html  fn.einsum_bound.html  fn.einsum_impl.html  fn.inner.html  fn.inner_bound.html  index.html  macro.array.html  macro.einsum!.html  macro.einsum.html  macro.einsum_bound!.html  macro.einsum_bound.html  macro.pyarray!.html  macro.pyarray.html  macro.pyarray_bound!.html  macro.pyarray_bound.html  sidebar-items.js  struct.AllowTypeChange.html  struct.AsSliceError.html  struct.DimensionalityError.html  struct.FromVecError.html  struct.NotContiguousError.html  struct.PyArrayDescr.html  struct.PyArrayLike.html  struct.PyFixedString.html  struct.PyFixedUnicode.html  struct.PyReadonlyArray.html  (+35 more)
numpy-build-config/: Cargo.toml
numpy-build-config/src/: impl_.rs  lib.rs
numpy-example/: Cargo.toml
numpy-example/src/: lib.rs
numpy-sys/: Cargo.toml  build.rs  rustfmt.toml
numpy-sys/.cargo/: config
numpy-sys/src/: array.rs  array_api.c  arrayiter.rs  iterator.rs  lib.rs  multiarray.rs  pyarray.rs  pyarrayiter.rs  pyufunc.rs  types.rs  ufunc.rs
numpy-sys/tests/: array.rs  link.rs
numpy-test/: Cargo.toml  test.py
numpy-test/src/: lib.rs
numpy/array/: fn.get_array_module.html  index.html  sidebar-items.js  struct.PyArray.html  trait.PyArray0Methods.html  trait.PyArrayMethods.html  type.PyArray0.html  type.PyArray1.html  type.PyArray2.html  type.PyArray3.html  type.PyArray4.html  type.PyArray5.html  type.PyArray6.html  type.PyArrayDyn.html
numpy/array_like/: struct.AllowTypeChange.html  struct.PyArrayLike.html  struct.TypeMustMatch.html  type.PyArrayLike0.html  type.PyArrayLike1.html  type.PyArrayLike2.html  type.PyArrayLike3.html  type.PyArrayLike4.html  type.PyArrayLike5.html  type.PyArrayLike6.html  (+1 more)
remove-travis/: settings.html
search.index/: 000835f79bb8.js  000f72ba429f.js  001c5797993a.js  003560fac676.js  003ca3d11bb6.js  0077f9da2795.js  00a54983d69c.js  00bb6e5a9b35.js  00bb86620070.js  00c97425786a.js  00e07354e0b0.js  00e283ff5a0a.js  0105b97df417.js  0108786ff133.js  010cc0b70ef4.js  010d748de4eb.js  010fd5a4747e.js  01304d800cbe.js  0138993289d9.js  0153a869063c.js  01566ace6f2e.js  0163d9a1538c.js  0175ce87bcc8.js  0179ce81ce5b.js  017d864123c0.js  01827e7f6203.js  01895211a434.js  0193de968214.js  01adcb1a5983.js  01c4a9442759.js  01dbc13adbda.js  02017f5b5bbb.js  020765f27b4a.js  02366d52027c.js  0245e25263aa.js  025af7566ea4.js  02715ed8ca50.js  02739e0561a2.js  028e46b088ad.js  02c804fa150a.js  (+1293 more)
src/: array.rs  array_like.rs  borrow.rs  convert.rs  datetime.rs  descr.rs  dtype.rs  error.rs  lib.rs  npyiter.rs  owner.rs  random.rs  readonly.rs  slice_box.rs  slice_container.rs  strings.rs  sum_products.rs  types.rs  ufunc.rs  untyped_array.rs
tests/: array.rs  array_like.rs  borrow.rs  iter.rs  sum_products.rs  to_py.rs
(+1155 files in other folders)
