[package]
name = "numpy"
version = "0.28.0"
authors = [
    "The rust-numpy Project Developers",
    "PyO3 Project and Contributors <https://github.com/PyO3>",
]
description = "PyO3-based Rust bindings of the NumPy C-API"
documentation = "https://docs.rs/numpy"
edition.workspace = true
rust-version.workspace = true
repository = "https://github.com/PyO3/rust-numpy"
categories = ["api-bindings", "development-tools::ffi", "science"]
keywords = ["python", "numpy", "ffi", "pyo3"]
license = "BSD-2-Clause"
exclude = [
    ".github/*",
    ".gitignore",
    "codecov.yml",
    "x.py",
]

[features]
default = ["target-npy119"]

# Default and minimum supported version are chosen to match the content of
# header `numpy/_core/include/numpy/numpyconfig.h`` in the first available
# version of numpy v2.
target-npy115 = ["numpy-build-config/target-npy115"]
target-npy116 = ["numpy-build-config/target-npy116"]
target-npy117 = ["numpy-build-config/target-npy117"]
target-npy118 = ["numpy-build-config/target-npy118"]
target-npy119 = ["numpy-build-config/target-npy119"]
target-npy120 = ["numpy-build-config/target-npy120"]
target-npy121 = ["numpy-build-config/target-npy121"]
target-npy122 = ["numpy-build-config/target-npy122"]
target-npy123 = ["numpy-build-config/target-npy123"]
target-npy124 = ["numpy-build-config/target-npy124"]
target-npy125 = ["numpy-build-config/target-npy125"]
target-npy20 = ["numpy-build-config/target-npy20"]
target-npy21 = ["numpy-build-config/target-npy21"]
target-npy22 = ["numpy-build-config/target-npy22"]
target-npy23 = ["numpy-build-config/target-npy23"]
target-npy24 = ["numpy-build-config/target-npy24"]

[dependencies]
half = { version = "2.0", default-features = false, optional = true }
libc = "0.2"
nalgebra = { version = ">=0.30, <0.35", default-features = false, optional = true }
num-complex = ">= 0.2, < 0.5"
num-integer = "0.1"
num-traits = "0.2"
ndarray = ">= 0.15, <=0.17"
pyo3 = { version = "0.28.0", default-features = false, features = ["macros"] }
rustc-hash = "2.0"

[dev-dependencies]
pyo3 = { version = "0.28.0", default-features = false, features = ["auto-initialize"]}
nalgebra = { version = ">=0.30, <0.35", default-features = false, features = ["std"] }

[build-dependencies]
pyo3-build-config = { version = "0.28", features = ["resolve-config"]}
numpy-build-config = { path = "numpy-build-config", version = "0.28.0" }

[package.metadata.docs.rs]
all-features = true

[lints.rust]
# We usually want to make the GIL lifetime explicit.
elided-lifetimes-in-paths = "deny"

[lints.clippy]
needless-lifetimes = "allow"

[workspace.package]
edition = "2021"
rust-version = "1.83"

[workspace]
members = ["numpy-build-config"]
