[package]
name = "numpy-example"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = { path = "../.." }
pyo3 = { git =  "https://github.com/kngwyu/pyo3", branch = "native-type-with-generics"}
ndarray = "0.11"
