[package]
name = "numpy-example"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = { path = "../.." }
pyo3 = { git =  "https://github.com/pyo3/pyo3", rev = "547fa35604a61d2d750390940ed5a0d34ed09821"}
ndarray = "0.11"
