[package]
name = "numpy-example"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = { path = "../.." }
ndarray = "0.11"

[dependencies.pyo3]
git = "https://github.com/kngwyu/pyo3.git"
branch = "upd"
features = ["extension-module"]
