[package]
name = "rust-linalg"
version = "0.1.0"
authors = ["Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]
edition = "2018"

[lib]
name = "rust_linalg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0-dev", features = ["extension-module"] }
numpy = { path = "../.." }
ndarray-linalg = { version = "0.14.1", features = ["openblas-system"] }

[workspace]
