[build-system]
build-backend = "maturin"
requires = ["maturin>=0.12,<0.13"]

[tool.poetry]
name = "numpy-linalg-example"
version = "0.1.0"
description = "rust-numpy example with ndarray-linalg"
authors = ["Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]

[tool.poetry.dependencies]
numpy = ">=1.18"
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
maturin = ">=0.12,<0.13"
pytest = "^6.1"
