[package]
name = "numpy-example"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = { path = "../.." }
ndarray = ">= 0.12"

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]
