[build-system]
build-backend = "maturin"
requires = ["poetry_core>=1.0.0"]

[tool.poetry]
name = "numpy-example"
version = "0.1.0"
description = "A minimum example of rust-numpy"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>", "Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]

[tool.poetry.dependencies]
numpy = ">=1.18"
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
