[build-system]
build-backend = "maturin"
requires = ["maturin>=0.12,<0.13"]

[tool.poetry]
name = "numpy-example"
version = "0.1.0"
description = "A minimum example of rust-numpy"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>", "Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]

[tool.poetry.dependencies]
numpy = ">=1.18"
python = ">=3.7,<3.11"

[tool.poetry.dev-dependencies]
maturin = ">=0.12,<0.13"
pytest = "^6.1"
