[package]
name = "rust-ext"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>", "Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]
edition = "2018"

[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module", "abi3-py37"] }
numpy = { path = "../.." }

[workspace]
